<resources>
    <string name="app_name">Sessions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_timer">Timer</string>
    <string name="title_usage">Usage</string>
    <string name="title_settings">Settings</string>
    <string name="heading_usage">Last 3 Days</string>
    <string name="header_usage">Today\'s Usage</string>
    <string name="header_sessions">Today\'s Sessions</string>
    <string name="caption_usage">Usage</string>
    <string name="caption_sessions">Sessions</string>
    <string name="caption_goal">Goal</string>
    <string name="date_format">E, M d</string>
    <string name="title_activity_introduction2">Introduction2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heading_timer">Timer</string>
    <string name="session_caption">Focus</string>
    <string name="caption_focus">Focus on your work</string>
    <string name="caption_break">Take a break</string>
    <string name="settingsHeading_sessions">Sessions</string>
    <string name="headingSettings_goal">Goal</string>
    <string name="headingSettings_shortBreaks">Short Breaks</string>
    <string name="headingSettings_longBreaks">Long Breaks</string>
    <string name="quote_caption">One day we will be more creative, more productive, and yet more relaxed.</string>
    <string name="quote_author">- Francesco Cirillo</string>
</resources>